# Switch_Crew

./: .dockerignor  .env  .env_example  .gitignore  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yml  gssapi-1.9.0-cp312-cp312-win_amd64.whl  main.py  pyproject.toml  pytest.ini  top_users.json
alembic/: env.py
alembic/versions/: 01238110a738_reply_to_comment_with_comment.py  05ae8f63be29_add_tags.py  0aee9c487e7d_fix_photo_tags.py  1694d4bdb9b0_add_tags.py  196a4b231e0a_fix_users.py  287e89488387_add_updated_at_to_comments.py  3b8b424836c1_add_photo_tags_and_tags_relationships.py  414b47ceb57b_add_photo_rating_table_and_relationship_.py  481b5b819952_added_photo_reactions.py  5e7232690cba_added_photo_reactions.py  5fdb82af8631_add_table_subscriptions.py  72710fca2fd8_add_qr_code_url_to_photo.py  75bcd4ecdc9a_add_table_chat_message_chat_users.py  91ca0df3a0a0_add_report_and_relationship_to_user_.py  9436699db887_type_of_birth_date_changed_to_datetime.py  a770e2f569e3_delete_tags_relationships.py  a795ef55480c_add_photo_rating_fix.py  ad7793cd6454_add_relationships.py  b5c62124d92e_change_rating_column_to_numeric.py  bba855c52042_add_role_user.py  c9c5f37beee8_add_checkout_models.py  (+7 more)
config/: db.py  general.py
src/: __init__.py
templates/: admin_base.html  all_photos.html  base.html  index.html  login.html  page.html  photo_page.html  photos_by_tag.html  tags.html  upload_photo.html
tests/: test_auth_repos.py  test_comment_routs.py  test_comments_repos.py  test_photo_repository.py  test_reaction_repository.py  test_tags_repos.py  test_tags_routers.py
(+91 files in other folders)
